# anycount

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
data/: anon_customer_call.csv
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/anycount/: __init__.py  aistats.py  cli.py
tests/: __init__.py  test_anycount.py
