[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anycount"
version = "0.1.0"
description = "Implementation of Lindon Neurips 2022 and Lindon AISTATS 2025"
readme = "README.rst"
authors = [
  {name = "Michael Lindon", email = "michael.s.lindon@gmail.com"}
]
maintainers = [
  {name = "Michael Lindon", email = "michael.s.lindon@gmail.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  "typer",
  "numpy",
  "fn.py",
  "scipy"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/michaellindon/anycount/issues"
changelog = "https://github.com/michaellindon/anycount/blob/master/changelog.md"
homepage = "https://github.com/michaellindon/anycount"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

